--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camino hacia mi centro</title>
-  
+
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Playfair+Display:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -16,20 +16,25 @@
       --primary-color: #4b2a73;
       --secondary-color: #5a3f82;
       --accent-color: #d8c7f7;
+      --text-color: #333;
       --light-text: #fff;
       --font-heading: 'Playfair Display', serif;
       --font-body: 'Lato', sans-serif;
+      --glass-bg: rgba(255, 255, 255, 0.36);
+      --glass-border: rgba(255, 255, 255, 0.5);
     }
 
     body {
       margin: 0;
       font-family: var(--font-body);
-      color: #333;
-      background: linear-gradient(135deg, #e8d9ff 0%, #f7c3e3 50%, #ffd0a8 100%);
+      background:
+        radial-gradient(1200px 800px at 10% 5%, rgba(255,255,255,0.45), rgba(255,255,255,0) 60%),
+        linear-gradient(135deg, #e8d9ff 0%, #f7c3e3 50%, #ffd0a8 100%);
+      color: var(--text-color);
       min-height: 100vh;
     }
 
-    /* --- Pantalla de login y expiración --- */
+    /* --- Pantalla de acceso y expiración --- */
     #access-screen, #expired-screen {
       position: fixed;
       inset: 0;
@@ -79,7 +84,9 @@
       color: var(--secondary-color);
     }
 
-    /* --- Estilos originales --- */
+    .hidden { display: none !important; }
+
+    /* --- Resto del diseño original --- */
     header {
       text-align: center;
       padding: 4rem 2rem 2rem;
@@ -87,7 +94,7 @@
 
     header h1 {
       font-family: var(--font-heading);
-      font-size: 3rem;
+      font-size: clamp(2.4rem, 4vw + 1rem, 3.8rem);
       color: var(--primary-color);
       margin: 0;
     }
@@ -98,16 +105,16 @@
     }
 
     nav {
-      background: rgba(255, 255, 255, 0.4);
+      background: var(--glass-bg);
       backdrop-filter: blur(15px);
       padding: 1rem;
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      gap: 0.75rem;
       flex-wrap: wrap;
       border-radius: 14px;
       max-width: 1024px;
-      margin: 2rem auto;
+      margin: 1.5rem auto 2rem;
     }
 
     nav a {
@@ -135,17 +142,67 @@
       padding: 2rem;
       max-width: 980px;
       margin: 2rem auto;
-      background: rgba(255, 255, 255, 0.5);
+      background: var(--glass-bg);
       backdrop-filter: blur(15px);
       border-radius: 20px;
+      border: 1px solid var(--glass-border);
     }
 
     h2 {
       font-family: var(--font-heading);
+      font-size: 2rem;
       color: var(--primary-color);
       border-bottom: 2px solid var(--accent-color);
       display: inline-block;
       padding-bottom: 0.5rem;
+    }
+
+    .video-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.2rem;
+      margin-top: 1.2rem;
+    }
+
+    .video-container iframe {
+      width: 100%;
+      aspect-ratio: 16/9;
+      border: none;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .video-container iframe:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.2rem;
+      margin-top: 1.2rem;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.55);
+      padding: 1.6rem;
+      border-radius: 16px;
+      text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border: 1px solid rgba(255, 255, 255, 0.55);
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.12);
+    }
+
+    .card i {
+      font-size: 2rem;
+      color: var(--primary-color);
+      margin-bottom: 0.75rem;
     }
 
     footer {
@@ -157,14 +214,10 @@
       background: rgba(255,255,255,0.42);
       backdrop-filter: blur(10px);
     }
-
-    .hidden {
-      display: none !important;
-    }
   </style>
 </head>
 <body>
-  <!-- Pantalla de acceso -->
+  <!-- Pantallas de acceso -->
   <div id="access-screen">
     <h2>Bienvenidas a Camino hacia mi Centro 🦋</h2>
     <p>Por favor, ingresa la contraseña para acceder al contenido:</p>
@@ -173,13 +226,12 @@
     <p id="error" style="color:red; display:none;">Contraseña incorrecta</p>
   </div>
 
-  <!-- Pantalla de expiración -->
   <div id="expired-screen" class="hidden">
     <h2>✨ El acceso ha finalizado</h2>
     <p>Gracias por formar parte de Camino hacia mi Centro 💜</p>
   </div>
 
-  <!-- Contenido del sitio -->
+  <!-- Contenido principal -->
   <div id="main-content" class="hidden">
     <header>
       <h1>Camino hacia mi centro <span class="butterfly">🦋</span></h1>
@@ -189,8 +241,8 @@
     <nav>
       <a href="#inicio"><i class="fas fa-home"></i> Inicio</a>
       <a href="#clases"><i class="fas fa-spa"></i> Clases y Rutina</a>
-      <a href="#alimentacion"><i class="fas fa-apple-alt"></i> Alimentación</a>
-      <a href="#meditaciones"><i class="fas fa-om"></i> Meditaciones</a>
+      <a href="#alimentacion"><i class="fas fa-apple-alt"></i> Alimentación Consciente</a>
+      <a href="#meditaciones"><i class="fas fa-om"></i> Meditaciones y Rituales</a>
       <a href="#grupo"><i class="fas fa-users"></i> Grupo</a>
       <a href="#descargables"><i class="fas fa-download"></i> Descargables</a>
     </nav>
@@ -200,13 +252,52 @@
         <h2>Bienvenida</h2>
         <p>Este espacio fue creado con muchísimo amor para acompañarte en tu camino de bienestar. Aquí encontrarás clases de yoga, meditaciones y rituales que te ayudarán a reconectar con tu centro.</p>
       </section>
+
       <section id="clases">
         <h2>Clases de Yoga</h2>
-        <p>7 clases cortas pensadas para tu práctica semanal.</p>
+        <p>7 clases cortas pensadas para tu práctica semanal. Se repiten durante todo el mes para ayudarte a integrar el hábito.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 1"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 2"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 3"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 4"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 5"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 6"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Clase 7"></iframe>
+        </div>
       </section>
+
+      <section id="alimentacion">
+        <h2>Alimentación Consciente</h2>
+        <p>Aquí podrás encontrar tips, recetas y guías para una alimentación más saludable y conectada con tu bienestar.</p>
+        <div class="card-grid">
+          <div class="card"><i class="fas fa-carrot"></i><h3>Recetas Saludables</h3><p>Platos deliciosos y nutritivos para cuidar tu cuerpo.</p></div>
+          <div class="card"><i class="fas fa-leaf"></i><h3>Tips de Nutrición</h3><p>Consejos prácticos para mejorar tus hábitos diarios.</p></div>
+          <div class="card"><i class="fas fa-heart"></i><h3>Come con Amor</h3><p>Aprende a conectar con tu comida de una forma más consciente.</p></div>
+        </div>
+      </section>
+
       <section id="meditaciones">
         <h2>Meditaciones y Rituales</h2>
-        <p>Conecta con tu interior a través de la calma y la intención consciente.</p>
+        <p>Espacio para conectar con tu interior a través de la calma y la intención consciente.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Meditación 1"></iframe>
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Meditación 2"></iframe>
+        </div>
+      </section>
+
+      <section id="grupo">
+        <h2>Grupo</h2>
+        <p>Únete a la comunidad y compartí tu camino. <a href="#">Haz clic aquí para entrar al grupo privado.</a></p>
+      </section>
+
+      <section id="descargables">
+        <h2>Descargables</h2>
+        <p>Aquí podrás acceder a material adicional: PDF, playlists y guías prácticas para acompañar tu experiencia.</p>
+        <div class="card-grid">
+          <div class="card"><i class="fas fa-file-pdf"></i><h3>Guía de Meditación</h3><p>PDF para iniciarte en la práctica de la meditación.</p></div>
+          <div class="card"><i class="fas fa-music"></i><h3>Playlists Relajantes</h3><p>Música para tus sesiones de yoga y meditación.</p></div>
+        </div>
       </section>
     </main>
 
@@ -222,14 +313,11 @@
     function checkPassword() {
       const input = document.getElementById("password").value;
       const error = document.getElementById("error");
-
       if (input === PASSWORD) {
         const now = new Date();
         localStorage.setItem(ACCESS_KEY, now.toISOString());
         showContent();
-      } else {
-        error.style.display = "block";
-      }
+      } else error.style.display = "block";
     }
 
     function showContent() {
@@ -242,18 +330,14 @@
       document.getElementById("expired-screen").classList.remove("hidden");
     }
 
-    // Verificar acceso
+    // Verifica acceso guardado
     const savedDate = localStorage.getItem(ACCESS_KEY);
     if (savedDate) {
       const firstAccess = new Date(savedDate);
       const now = new Date();
       const diffDays = (now - firstAccess) / (1000 * 60 * 60 * 24);
-
-      if (diffDays <= 30) {
-        showContent();
-      } else {
-        showExpired();
-      }
+      if (diffDays <= 30) showContent();
+      else showExpired();
     }
   </script>
 </body>
